== Changelog

=== 4.11.2 (released 2x.04.2018)
* PR #705 Make screenshot of SelenideElement/WebElement which is inside iframe -- thanks to @andrejska
* PR #646 Added method to check if page is scrolled to the bottom -- thanks to @pavelpp
* PR #715 Added static analysis for avoiding start import for main package, fixing existing violations -- thanks to @andrejska
* PR #714 dd series of unit tests for commands, collections, conditions, impl package classes -- thanks to @azakordonets
* Upgrade to webdrivermanager:2.2.1
* Upgrade to htmlunit:2.30

=== 4.11.1 (released 03.04.2018)
* #711 Fix problem with hanging Chrome on Windows    -- thanks to Aliaksandr Rasolka @rosolko for PR 711
 (Chrome processes are still alive after calling `close` method)

=== 4.11.0 (released 02.04.2018)
* upgrade to selenium-java:3.11.0
* deprecated followLink method - just use click instead.
* #688 support downloading files with cyrillic name
* #692 added support for `-Dchromeoptions.prefs=profile.block_third_party_cookies=false,profile.avatar_index=26` -- thanks to Tymur Kubai aka @sirdir
* #686 fix occasional NPE's in SelenideReport -- thanks to @dkorobtsov
* #478 added method `$$.shouldHave(textsInAnyOrder("Push", "Image", "Email"))` -- thanks @hyunil-shin for PR #589
* #687 Add ability to set browser window position -- thanks to Aliaksandr Rasolka @rosolko for PR 687
* #655 fix listeners soft asserts return null screenshot for failed test -- thanks to Boris Osipov @BorisOsipov for PR #659
* make it possible to add customer request/response interceptors to selenide proxy server

=== 4.10.01 (released 19.01.2018)
* #672 fixed lazy evaluation of `$$.get(index)`, `$$.first(n)`, `$$.last(n)`, `$$.last()`
* #678 upgrade to webdrivermanager:2.1.0

=== 4.10 (released 12.01.2018)
* #641 Increased Elements Collection performance -- thanks to Artem Savosik @CaBocuk for PR 653
* #639 Add "User-Agent" header when downloading file -- thanks to Aleksandr Rasolka @rosolko